--- a/resource-template.yaml
+++ b/resource-template.yaml
@@ -4,3 +4,7 @@ Resources:
     Type: AWS::EC2::VPC
     Properties:
       CidrBlock: 10.10.0.0/16
+  SecondVPC:
+    Type: AWS::EC2::VPC
+    Properties:
+      CidrBlock: 10.20.0.0/16
