--- a/resource-template.yaml
+++ b/resource-template.yaml
@@ -8,3 +8,7 @@ Resources:
     Type: AWS::EC2::VPC
     Properties:
       CidrBlock: 10.20.0.0/16
+  ThirdVPC:
+    Type: AWS::EC2::VPC
+    Properties:
+      CidrBlock: 10.30.0.0/16
